chore: delete bloc distributionManagement

--- a/pom.xml
+++ b/pom.xml
@@ -50,22 +50,6 @@
         <url>https://github.com/kkm237/notifier/actions</url>
     </ciManagement>
 
-
-        <!-- ========================================== -->
-        <!-- DISTRIBUTION MANAGEMENT (SONATYPE)        -->
-        <!-- ========================================== -->
-
-        <distributionManagement>
-            <snapshotRepository>
-                <id>ossrh</id>
-                <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-            </snapshotRepository>
-            <repository>
-                <id>ossrh</id>
-                <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-            </repository>
-        </distributionManagement>
-
     <modules>
         <module>notifier-core</module>
         <module>notifier-email</module>
@@ -106,17 +90,7 @@
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.sonatype.central</groupId>
-                    <artifactId>central-publishing-maven-plugin</artifactId>
-                    <version>0.9.0</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                        <publishingServerId>central</publishingServerId>
-                    </configuration>
-                </plugin>
-
-                <!-- GPG signing  -->
+                <!-- GPG Signing Plugin -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
@@ -130,6 +104,19 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+
+                <!-- Central Publishing Plugin -->
+                <plugin>
+                    <groupId>org.sonatype.central</groupId>
+                    <artifactId>central-publishing-maven-plugin</artifactId>
+                    <version>0.9.0</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <publishingServerId>central</publishingServerId>
+                        <autoPublish>true</autoPublish>
+                        <waitUntil>published</waitUntil>
+                    </configuration>
                 </plugin>
 
                 <!-- Javadoc and source attachement  -->
