--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,30 @@
 
 
     <build>
+
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.sonatype.central</groupId>
+                    <artifactId>central-publishing-maven-plugin</artifactId>
+                    <version>0.9.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
+
+            <plugins>
+                <!-- Central Publishing Plugin -->
+                <plugin>
+                    <groupId>org.sonatype.central</groupId>
+                    <artifactId>central-publishing-maven-plugin</artifactId>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <publishingServerId>central</publishingServerId>
+                        <autoPublish>true</autoPublish>
+                        <waitUntil>published</waitUntil>
+                    </configuration>
+                </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -115,18 +137,7 @@
                     </executions>
                 </plugin>
 
-                <!-- Central Publishing Plugin -->
-                <plugin>
-                    <groupId>org.sonatype.central</groupId>
-                    <artifactId>central-publishing-maven-plugin</artifactId>
-                    <version>0.9.0</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                        <publishingServerId>central</publishingServerId>
-                        <autoPublish>true</autoPublish>
-                        <waitUntil>published</waitUntil>
-                    </configuration>
-                </plugin>
+
 
                 <!-- Javadoc and source attachement  -->
                 <plugin>
@@ -162,7 +173,7 @@
                 </plugin>
             </plugins>
 
-        </pluginManagement>
+
 
     </build>
 
