--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: CENTRAL_USERNAME
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -27,7 +28,7 @@ jobs:
         # On extrait la version du tag (ex: v1.0.0 -> 1.0.0) pour l'injecter dans Maven
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
-          mvn clean deploy -DskipTests -Drevision=$VERSION
+          mvn clean deploy -DskipTests -pl '!notifier-test' -Drevision=$VERSION
         env:
           MAVEN_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
