--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: CENTRAL_USERNAME
+    environment: notifier # notifier must exist to GitHub (settings- environment -  new environment - name = notifier - create secret of environment: GPG_PRIVATE_KEY, CENTRAL_USERNAME, CENTRAL_PASSWORD, GPG_PASSPHRASE)
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -25,11 +25,10 @@ jobs:
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
       - name: Publish to Central Portal
-        # On extrait la version du tag (ex: v1.0.0 -> 1.0.0) pour l'injecter dans Maven
+        # extract tag version (ex: v1.0.0 -> 1.0.0) for inject in Maven
         run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          mvn clean deploy -DskipTests -pl '!notifier-test' -Drevision=$VERSION
-        env:
-          MAVEN_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
-          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          mvn clean deploy -DskipTests -pl '!notifier-test'
+#        env:
+#          MAVEN_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
+#          MAVEN_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
+#          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
